tests/neg/ambiref.check
-- [E049] Reference Error: tests/neg/ambiref.scala:8:14 ----------------------------------------------------------------
8 |      println(x)  // error
  |              ^
  |              Reference to x is ambiguous.
  |              It is both defined in object Test
  |              and inherited subsequently in class D
  |
  | longer explanation available when compiling with `-explain`
-- [E049] Reference Error: tests/neg/ambiref.scala:10:14 ---------------------------------------------------------------
10 |      println(x)  // error
   |              ^
   |              Reference to x is ambiguous.
   |              It is both defined in object Test
   |              and inherited subsequently in anonymous class test1.C {...}
   |
   | longer explanation available when compiling with `-explain`
-- [E049] Reference Error: tests/neg/ambiref.scala:17:14 ---------------------------------------------------------------
17 |      println(y)  // error
   |              ^
   |              Reference to y is ambiguous.
   |              It is both defined in method c
   |              and inherited subsequently in anonymous class D {...}
   |
   | longer explanation available when compiling with `-explain`
-- [E049] Reference Error: tests/neg/ambiref.scala:25:16 ---------------------------------------------------------------
25 |        println(y)  // error
   |                ^
   |                Reference to y is ambiguous.
   |                It is both defined in method c
   |                and inherited subsequently in class E
   |
   | longer explanation available when compiling with `-explain`
-- [E049] Reference Error: tests/neg/ambiref.scala:43:10 ---------------------------------------------------------------
43 |  println(global)    // error
   |          ^^^^^^
   |          Reference to global is ambiguous.
   |          It is both defined in package <empty>
   |          and inherited subsequently in object D
   |
   | longer explanation available when compiling with `-explain`
-- [E049] Reference Error: tests/neg/ambiref.scala:49:16 ---------------------------------------------------------------
49 |    def t = new T { } // error
   |                ^
   |                Reference to T is ambiguous.
   |                It is both defined in package p
   |                and inherited subsequently in class C
   |
   | longer explanation available when compiling with `-explain`
